--- a/la-natuna/package.json
+++ b/la-natuna/package.json
@@ -25,6 +25,6 @@
   },
     "repository": {
     "type": "git",
-    "url": "https://github.com/mrzldy/tiktok-downloader.git"
+    "url": "https://github.com/lucasramboy/xtz"
 }
 }
